made page title a variable

--- a/views/pages/bot_help.ejs
+++ b/views/pages/bot_help.ejs
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-	<% include ../partials/head %>
-	<title>Bot Help | Homework Master</title>
-</head>
+<% title = 'Bot Help' %>
+<% include ../partials/head %>
 
 <body>
 	<div class="header">
