--- a/views/pages/invite.ejs
+++ b/views/pages/invite.ejs
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-	<title>
-		<%= invite.guild.name%> | Homework Master
-	</title>
-	<% include ../partials/head %>
-</head>
+<% title = invite.guild.name %>
+<% include ../partials/head %>
 
 <body>
 	<div class="header">
