--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-	<% include ../partials/head %>
-	<title>Login | Homework Master</title>
-</head>
+<% title = 'Login' %>
+<% include ../partials/head %>
 
 <body>
 	<div class="header">
