--- a/views/pages/timetable.ejs
+++ b/views/pages/timetable.ejs
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-	<% include ../partials/head %>
-	<title>Sign Up | Homework Master</title>
-</head>
+<% title = 'My Timetable'%>
+<% include ../partials/head %>
 
 <body>
 	<div class="header">
