--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-	<% include ../partials/head %>
-	<title>Homework Master</title>
-</head>
+<% title = null %>
+<% include ../partials/head %>
 
 <body>
 	<div class="header">
