--- a/views/pages/join.ejs
+++ b/views/pages/join.ejs
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-	<% include ../partials/head %>
-	<title>Join | Homework Master</title>
-</head>
+<% title = 'Join' %>
+<% include ../partials/head %>
 
 <body>
 	<div class="header">
