--- a/views/pages/unavaliable.ejs
+++ b/views/pages/unavaliable.ejs
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-	<% include ../partials/head %>
-	<title>
-		Unavaliable | Homework Master
-	</title>
-</head>
+<% title = 'Unavaliable'%>
+<% include ../partials/head %>
 
 <body>
 	<div class="header">
