--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,11 +1,14 @@
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="/css/style.css" rel="stylesheet" type="text/css">
-<link href="/css/popout.css" rel="stylesheet" type="text/css">
-<link href="/css/form.css" rel="stylesheet" type="text/css">
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-<meta name="msapplication-TileColor" content="#da532c">
-<meta name="theme-color" content="#ffffff">
+<head>
+	<title><%= title ? title + ' | ' : '' %>Homework Master</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="/css/style.css" rel="stylesheet" type="text/css">
+	<link href="/css/popout.css" rel="stylesheet" type="text/css">
+	<link href="/css/form.css" rel="stylesheet" type="text/css">
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="manifest" href="/site.webmanifest">
+	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="theme-color" content="#ffffff">
+</head>
