removed the bad guild page from menu

--- a/views/pages/invite.ejs
+++ b/views/pages/invite.ejs
@@ -31,6 +31,7 @@
 				</p>
 			</div>
 		</div>
+		<% include ../partials/widget%>
 	</div>
 	<% include ../partials/menu %>
 	<script src="/js/index.js"></script>
