--- a/views/pages/my_profile.ejs
+++ b/views/pages/my_profile.ejs
@@ -25,6 +25,9 @@
 				Background colour
 			</div>
 		</div>
+		<div class="post">
+			<% include ../forms/bio %>
+		</div>
 	</div>
 	<button class="important-link delete-account-modal delete-button">Delete This Account.</button>
 
