--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -17,17 +17,20 @@
 		</h1>
 	</div>
 	<div class="content">
-		<div class="content">
-			<div class="post">
-				<div class="title">What should go here?</div>
-				<div class="message">
-					If you have any ideas, please tell me what you think I should put here.<br>
-					<h4>My ideas:</h4>
-					User Timetable<br>
-					Achievements<br>
-					A Bio<br>
-					Custom colour
-				</div>
+		<% if (userData.bio) { %>
+		<div class="post">
+			<div class="message"><%= userData.bio %></div>
+		</div>
+		<% } %>
+		<div class="post">
+			<div class="title">Features to come here?</div>
+			<div class="message">
+				If you have any ideas, please tell me what you think I should put here.<br>
+				<h4>My ideas:</h4>
+				User Timetable<br>
+				Achievements<br>
+				Custom colour<br>
+				Social media links
 			</div>
 		</div>
 	</div>
