added markdown suport for the bio

--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -19,7 +19,7 @@
 	<div class="content">
 		<% if (userData.bio) { %>
 		<div class="post">
-			<div class="message"><%= userData.bio %></div>
+			<div class="message"><%- userData.bio %></div>
 		</div>
 		<% } %>
 		<div class="post">
