General save profile button and update username

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -212,4 +212,12 @@ a {
 	background-color: crimson;
 	border: none;
 	font-weight: bold;
+	height: auto;
+}
+
+ul, ol {
+	text-align: left;
+	width: -moz-max-content;
+	width: fit-content;
+	margin: auto;
 }
