--- a/public/css/form.css
+++ b/public/css/form.css
@@ -62,3 +62,14 @@ textarea {
   min-height: 4em;
   padding: 1em;
 }
+
+.accept-button {
+  background-color: greenyellow;
+  border: none;
+  font-weight: bold;
+  padding: 1em;
+  height: auto;
+  cursor: pointer;
+  margin: 0;
+  width: 100%;
+}
