--- a/views/forms/login.ejs
+++ b/views/forms/login.ejs
@@ -14,7 +14,7 @@
 	<label for="password">
 		Password:
 	</label>
-	<input type="password" name="password" id="password" onchange="validateLogin()">
+	<input type="password" name="password" id="password">
 	<br>
 	<input type="button" value="OK" onclick="login()">
 </form>
