--- a/views/pages/my_profile.ejs
+++ b/views/pages/my_profile.ejs
@@ -8,7 +8,7 @@
 	<a href="/guilds/<%= guild.name.replace(/ /g, '_') %>/members/<%= name.replace(/ /g, '_') %>">View Profile</a>
 	<div class="header">
 		<h1>
-			<img src="<%= member.user.avatarURL %>" class="profilePic"></img>
+			<img src="<%= member.user.avatarURL %>" class="profilePic" title="Your Discord Profile Picture"></img>
 			<input name="username" form="update-profile" type="text" id="usernameContainer" value="<%= name%>" placeholder="<%= member.user.username%>" title="Your Username">
 		</h1>
 	</div>
