added blockquote markdown support

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -221,3 +221,11 @@ ul, ol {
 	width: fit-content;
 	margin: auto;
 }
+
+blockquote {
+	text-align: left;
+	background-color: antiquewhite;
+	color: blueviolet;
+	padding: 0.3em 1em 0.3em 2em;
+	border-left: 2px solid orange;
+}
