--- a/views/forms/login.ejs
+++ b/views/forms/login.ejs
@@ -16,5 +16,5 @@
 	</label>
 	<input type="password" name="password" id="password">
 	<br>
-	<input type="button" value="OK" onclick="login()">
+	<input type="submit" value="OK">
 </form>
