--- a/views/pages/invite.ejs
+++ b/views/pages/invite.ejs
@@ -31,6 +31,7 @@
 				</p>
 			</div>
 		</div>
+		<% let guild = invite.guild %>
 		<% include ../partials/widget%>
 	</div>
 	<% include ../partials/menu %>
