--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -28,13 +28,13 @@
 			<div class="menu-container" id="account-menu">
 				<div class="menu-tag-container">
 					<div class="menu-tag-content">
-						<%= session.user ? name : "logged out" %>
+						<%= session.user ? session.member.displayName : "logged out" %>
 					</div>
 				</div>
 				<div class="menu-content">
 					<% if (session.user) {%>
 					<a href="/me">My Account</a>
-					<a href="/guilds/<%= guild.name.replace(/ /g, '_') %>/members/<%= name.replace(/ /g, '_') %>">My Profile</a>
+					<a href="/guilds/<%= guild.name.replace(/ /g, '_') %>/members/<%= session.member.displayName.replace(/ /g, '_') %>">My Profile</a>
 					<span class="important-link logout-modal">Log Out</span>
 					<% } else { %>
 					<a href="/login">login</a>
