--- a/views/pages/my_profile.ejs
+++ b/views/pages/my_profile.ejs
@@ -5,11 +5,11 @@
 <% include ../partials/head %>
 
 <body>
-	<a href="/guilds/<%= guild.name.replace(/ /g, '_') %>/members/<%= name.replace(/ /g, '_') %>">View Profile</a>
+	<a href="/guilds/<%= guild.name.replace(/ /g, '_') %>/members/<%= session.member.displayName.replace(/ /g, '_') %>">View Profile</a>
 	<div class="header">
 		<h1>
 			<img src="<%= member.user.avatarURL %>" class="profilePic" title="Your Discord Profile Picture"></img>
-			<input name="username" form="update-profile" type="text" id="usernameContainer" value="<%= name%>" placeholder="<%= member.user.username%>" title="Your Username">
+			<input name="username" form="update-profile" type="text" id="usernameContainer" value="<%= session.member.displayName%>" placeholder="<%= member.user.username%>" title="Your Username">
 		</h1>
 	</div>
 	<div class="content">
@@ -17,7 +17,7 @@
 				<div class="title">Set Bio</div>
 				<textarea name="bio" type="text" class="full-width" 
 			placeholder="Tell everyone something wonderful. 
-Markdown is supported!" form="update-profile" rows="<%= userData.bio.split('\n').length%>" maxlength="500" title="Your Bio"><%- userData.bio%></textarea>
+Markdown is supported!" form="update-profile" rows="<%= userData.bio ? userData.bio.split('\n').length : 5 %>" maxlength="500" title="Your Bio"><%= userData.bio%></textarea>
 		</div>
 
 		<div class="post">
@@ -49,7 +49,7 @@ Markdown is supported!" form="update-profile" rows="<%= userData.bio.split('\n')
 				</p>
 			</form>
 			<span class="close">&times;</span>
-			<input type="submit" class="delete-button" form="delete-account-form" onclick="deleteAccount()" value="I understand and would like to continue.">
+			<input type="submit" class="delete-button" form="delete-account-form" value="I understand and would like to continue.">
 		</div>
 	</div>
 
