--- a/views/pages/my_profile.ejs
+++ b/views/pages/my_profile.ejs
@@ -5,11 +5,11 @@
 <% include ../partials/head %>
 
 <body>
-	<a href="/guilds/<%= guild.name.replace(/ /g, '_') %>/members/<%= session.member.displayName.replace(/ /g, '_') %>">View Profile</a>
+	<a href="/guilds/<%= member.guild.name.replace(/ /g, '_') %>/members/<%= member.displayName.replace(/ /g, '_') %>">View Profile</a>
 	<div class="header">
 		<h1>
 			<img src="<%= member.user.avatarURL %>" class="profilePic" title="Your Discord Profile Picture"></img>
-			<input name="username" form="update-profile" type="text" id="usernameContainer" value="<%= session.member.displayName%>" placeholder="<%= member.user.username%>" title="Your Username">
+			<input name="username" form="update-profile" type="text" id="usernameContainer" value="<%= member.displayName%>" placeholder="<%= member.user.username%>" title="Your Username">
 		</h1>
 	</div>
 	<div class="content">
@@ -45,7 +45,7 @@ Markdown is supported!" form="update-profile" rows="<%= userData.bio ? userData.
 			<form method="DELETE" id="delete-account-form">
 				<h4>Are you sure?</h4>
 				<p>
-				You will be kicked from <%= guild.name%> on discord and your classes will be wiped. Any ranks achieved will also be removed.
+				You will be kicked from <%= member.guild.name%> on discord and your classes will be wiped. Any ranks achieved will also be removed.
 				</p>
 			</form>
 			<span class="close">&times;</span>
