minor text fixes

--- a/views/pages/help.ejs
+++ b/views/pages/help.ejs
@@ -32,14 +32,14 @@
 			<div class="author">Made by Tristan Beedell</div>
 			<div class="message">
 				<div class="lookup">
-					<div>email</div>
-					<div>admin@homework-master.co.uk</div>
+					<div>Email</div>
+					<a href="mailto:admin@homework-master.co.uk">admin@homework-master.co.uk</a>
 
-					<div>discord</div>
-					<div>tristan#4101</div>
+					<div>Discord</div>
+					<div>@tristan#4101</div>
 
-					<div>instagram</div>
-					<div>tristanbeedell</div>
+					<div>Instagram</div>
+					<div>@tristanbeedell</div>
 				</div>
 			</div>
 		</div>
