--- a/views/pages/my_profile.ejs
+++ b/views/pages/my_profile.ejs
@@ -16,8 +16,9 @@
 	</div>
 	<div class="content">
 		<div class="post">
-			<div class="title">Features to come here.</div>
+			<div class="title">What should go here?</div>
 			<div class="message">
+				If you have any ideas, please tell me what you think I should put here.<br>
 				<h4>My ideas:</h4>
 				Customise Bio<br>
 				Customise Timetable<br>
