--- a/views/pages/timetable.ejs
+++ b/views/pages/timetable.ejs
@@ -9,34 +9,23 @@
 		<h1>Sign Up</h1>
 	</div>
 	<div class="content">
-		<% include ../forms/timetable %>
 		<div class="post">
-			<button onclick="reloadTable()">refresh</button>
-			<table id="table" style="width: 100%; height: 300px;">
-				<tr>
-					<th colspan="10">Your Timetable</th>
-				</tr>
-				<tr>
-					<th colspan="5">1</th>
-					<th colspan="5">2</th>
-				</tr>
-				<tr>
-					<%['Mon', 'Tues', 'Wed', 'Thurs', 'Fri', 'Mon', 'Tues', 'Wed', 'Thurs', 'Fri'].forEach(day => { %>
-					<th>
-						<%= day%>
-					</th>
-					<% })%>
-				</tr>
-				<% for (let i = 0; i < 5; i++) { %>
-				<tr>
-					<% for (let i = 0; i < 10; i++) { %>
-					<td></td>
-					<% }%>
-				</tr>
-				<%}%>
-			</table>
+			<% include ../partials/timetable%>
+		</div>
+		<input class="important-link signup-modal accept-button" type="button" value="OK" style="grid-column: 1/-1;">
+	</div>
+
+	<div id="signup-modal" class="modal">
+		<div class="signup-modal slide-down modal-content">
+			<div>You are about to create your account.<br>
+			Make sure your timetable matches. Please report any missing classes so they can be added.</div>
+			<span class="close">&times;</span>
+			<form method="POST" action="/timetable" id="timetable-form">
+				<input type="submit" value="Continue" />
+			</form>
 		</div>
 	</div>
+
 	<div class="page-wipe">
 		<div class="loader-container">
 			loading
