removed some unnessacery code

--- a/views/forms/sign_up.ejs
+++ b/views/forms/sign_up.ejs
@@ -15,7 +15,7 @@
 		<span class="error"></span>
 	</label>
 	<input type="password" name="checkPassword" id="checkPassword" onchange="check('checkPassword')">
-	<input type="hidden" name="guild" value="<%= guild%>">
+	<input type="hidden" name="guild" value="<%= member.guild%>">
 	<input type="hidden" name="member" value="<%= member%>">
 	<input type="hidden" name="password" id="password" value="<%= query.password%>" placeholder="(sent by the bot in DM)">
 	<br>
