user timetable can be reset and updated

--- a/views/pages/my_profile.ejs
+++ b/views/pages/my_profile.ejs
@@ -37,6 +37,7 @@ Markdown is supported!" form="update-profile" rows="<%= userData.rows[0].bio ? u
 			<% userData.rows.forEach(row => { %>
 				<%= row.set_name%><br>
 			<% }) %>
+			<a href="/empty_timetable">RESET</a>
 		<% } %>
 	</div>
 
