--- a/views/pages/my_profile.ejs
+++ b/views/pages/my_profile.ejs
@@ -5,25 +5,35 @@
 <% include ../partials/head %>
 
 <body>
-	<a href="/guilds/<%= member.guild.name.replace(/ /g, '_') %>/members/<%= member.displayName.replace(/ /g, '_') %>">View Profile</a>
 	<div class="header">
 		<h1>
 			<img src="<%= member.user.avatarURL %>" class="profilePic" title="Your Discord Profile Picture"></img>
 			<input name="username" form="update-profile" type="text" id="usernameContainer" value="<%= member.displayName%>" placeholder="<%= member.user.username%>" title="Your Username">
 		</h1>
 	</div>
+	<a href="/guilds/<%= encodeURIComponent(member.guild.name).replace(/ /g, '_') %>/members/<%= encodeURIComponent(member.displayName).replace(/ /g, '_') %>">View Profile</a>
 	<div class="content">
 		<% if (userData.rowCount > 0) { %>
 		<div class="post">
-				<div class="title">Set Bio</div>
-				<textarea name="bio" type="text" class="full-width" 
-			placeholder="Tell everyone something wonderful. 
-Markdown is supported!" form="update-profile" rows="<%= userData.rows[0].bio ? userData.rows[0].bio.split('\n').length : 5 %>" maxlength="500" title="Your Bio"><%= userData.rows[0].bio%></textarea>
-	
-			<form id="update-profile" method="POST" style="padding:0;display:block;height:3em">
-				<input type="submit" value="Save Changes" class="full-width accept-button" style="height:inherit">
-			</form>	
+			<div class="title">Write Bio</div>
+
+			<textarea name="bio" id="text-input" type="text" class="full-width" oninput="this.editor.update()"
+				placeholder="Tell everyone something wonderful. 
+Markdown is supported!" 
+				form="update-profile" rows="<%= userData.rows[0].bio ? userData.rows[0].bio.split('\n').length : 5 %>" 
+				maxlength="500" title="Your Bio"><%= userData.rows[0].bio%></textarea>
 		</div>
+		<div class="post">
+			<div class="title">Preview Bio</div>
+			<div class="message" id="preview"> </div>
+		</div>
+		<div class="lookup">
+			<div>Background Color</div>
+			<input type="color" name="color" value="<%= color || '#5F9EA0'%>" form="update-profile" oninput="document.body.style.setProperty('--theme-color', this.value)"/>
+		</div>
+		<form id="update-profile" method="POST" style="padding:0;display:block;height:3em">
+			<input type="submit" value="Save Changes" class="full-width accept-button" style="height:inherit">
+		</form>	
 		<% } %>
 	
 
@@ -45,6 +55,19 @@ Markdown is supported!" form="update-profile" rows="<%= userData.rows[0].bio ? u
 	<% include ../partials/menu %>
 
 	<script src="/js/index.js"></script>
+
+	<script src="js/markdown.js"></script> 
+	<script>
+		function Editor(input, preview) {
+			this.update = function () {
+				preview.innerHTML = markdown.toHTML(input.value);
+			};
+			input.editor = this;
+			this.update();
+		}
+		new Editor(document.getElementById("text-input"), document.getElementById("preview"));
+	</script>
+
 </body>
 
 </html>
