--- a/views/pages/help.ejs
+++ b/views/pages/help.ejs
@@ -15,18 +15,45 @@
 				<a class="no-swipe" href="#contact">Please contact me.</a>
 			</div>
 		</div>
-		<div class="post" id="view-source">
-			<div class="title">Want to see how it all works?</div>
+		<div class="post" id="how-to-sign-up">
+			<div class="title">How do I sign up?</div>
 			<div class="message">
-				<a class="no-swipe" href="https://github.com/tristanbeedell/homework-master" target="_blank">Visit my github repository from here!</a>
+				<p>You should have been given a group pin for your school. Go to <a href="/join">Join</a> and select the name of your school and enter the pin. You will then be given an invite link to discord.</p>
+				<p>When in discord, (after making an account or signing in) there should be a 'discord server' listed along the left side of the page. You will also have recieved a message from our trusty discord bot, <span class="mention">@Homework Master</span>. After giving the pin you will be sent a link where you can sign up to this site, and then you may pick which classes you are in.</p>
+				<p>Upon returning to discord, click on the server. You will notice the channels along the side have been added, one for each class. Go and say hello!</p>
+			</div>
+		</div>
+		<div class="post" id="what-is-discord">
+			<div class="title">What is Discord?</div>
+			<div class="message">
+				<p>
+					<a target="_blank" href="https://discordapp.com/">Discord</a> is a messaging service. It allows for large groups of people to gather in a 'discord server', containing many channels. The Homework Master will create a channel for each class you are in in school, and anyone else that is in that class can also see and speak in that channel. Discord is very easy to use, and  is on Android, iOS, desktop, and will even run in your browser (No download required).
+				</p>
+				<p>Different people have different permissions in a discord server. Admins can do what they like, so they can be trusted and you can turn to an admin in the server for problems.
+				</p>
+			</div>
+		</div>
+		<div class="post" id="cant-log-in">
+			<div class="title">I can't log in!</div>
+			<div class="message">
+				If you are having problems logging in, try the following:<br>
+				Login with your discord tag (e.g., username#1234) for your username.<br>
+				Click the 'CLICK TO SETUP' link send to you by the discord bot. Your account might not be made yet.<br>
+				To find out if you have made your account yet, send the bot the message <code>setup &lt;discord server name&gt;</code> and it will tell you if you have signed up for that server, and provide signup links if necassary. 
 			</div>
 		</div>
 		<div class="post" id="bot">
-			<div class="title">Bot Help</div>
+			<div class="title">How do I use the bot?</div>
 			<div class="message">
-				<a href="/help/bot">help with the bot can be found here.</a>
+				<a href="/help/bot">Help with the bot can be found here.</a>
+			</div>
+		</div><div class="post" id="view-source">
+			<div class="title">Source Code</div>
+			<div class="message">
+				For those who are developers, or just curious to see the source code, <a class="no-swipe" href="https://github.com/tristanbeedell/homework-master" target="_blank">visit my github repository from here!</a> You can leave comments, create an issue, or even fork the code if you like.
 			</div>
 		</div>
+		
 		<div class="post" id="contact">
 			<div class="title">Contact</div>
 			<div class="author">Made by Tristan Beedell</div>
