added summary to webpage and fixed some grammar

--- a/views/pages/bot_help.ejs
+++ b/views/pages/bot_help.ejs
@@ -14,6 +14,7 @@
 				<div class="title">
 					<%= command.name%>
 				</div>
+				<%- command.summary%>
 				<div class="message lookup">
 					<div>Usage</div>
 					<div class="docs">
